--- a/src/styles.css
+++ b/src/styles.css
@@ -26,7 +26,7 @@ img{
 nav{
   display: flex;
   justify-content: center;
-  background-color: rgb(98, 152, 101);;
+  background-color: orange;
 }
 
 section{
@@ -47,8 +47,10 @@ footer{
 button{
   background-color: pink;
 
+  border: none;
   padding: 1rem 2rem 1rem 2rem;
   border-radius: .2rem;
+  margin: 1rem;
 }
 
 button:hover{
